[gd_scene load_steps=4 format=3 uid="uid://cqjbebpmb6b0j"]

[ext_resource type="Script" path="res://script/Weapon/PickableWeapon_Template.gd" id="1_wwte5"]
[ext_resource type="PackedScene" uid="uid://c1wq5lryvvjl3" path="res://scene/Guns/aa12.tscn" id="2_211cr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ia3r8"]

[node name="PickableWeapon" type="Node2D"]
script = ExtResource("1_wwte5")

[node name="Gun_Template" parent="." instance=ExtResource("2_211cr")]

[node name="PickupArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
shape = SubResource("CircleShape2D_ia3r8")

[connection signal="area_entered" from="PickupArea2D" to="." method="_on_pickup_area_2d_area_entered"]
[connection signal="body_entered" from="PickupArea2D" to="." method="_on_pickup_area_2d_body_entered"]
[connection signal="body_exited" from="PickupArea2D" to="." method="_on_pickup_area_2d_body_exited"]
